src/input/inputfield/inputfield.fx.css
* {
    box-sizing: border-box;
}

textarea:focus, input:focus, select:focus {
    outline: none;
}

.selector::before {
    pointer-events: none;
}

.selector {
    display: block;
}

.selector:hover, select:hover {
    cursor: pointer;
}

select {
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
    padding: 0;
    text-align: left;
}

option {
    -moz-appearance: none;
    -webkit-appearance: none;
}

input, textarea, select {
    border: none;
    margin: 0;
    padding: 6px 12px 6px 12px;
    transition: 0.3s;
    font-size: 12px;
}

input, textarea, .select-overhaul, textarea {
    border-radius: 2px 2px 0 0;
}
textarea {
    border-bottom: 1px solid #CFD8DC;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input:invalid {
    border-bottom: 1px solid red;
}

@media screen and (-webkit-min-device-pixel-ratio:0) {  /*safari and chrome*/
    select {
        height:45px;
    }
}
select::-moz-focus-inner { /*Remove button padding in FF*/
    border: 0;
    padding: 0;
}
@-moz-document url-prefix() { /* targets Firefox only */
    select {
        padding: 15px 0!important;
    }
}

